# Changes

### Releases from [chrisant996/clink](https://github.com/chrisant996/clink) fork

#### v1.9.12

- Fixed position of highlights in the suggestion list to consistently use the earliest matching position.
- Internal logging improvements.

#### v1.9.11

- Added new Lua API [console.getoriginaltitle()](#console.getoriginaltitle) which gets what the OS considers to be the original console title.
- Fixed a potential crash if the terminal title is an empty string; an OS API is not behaving as documented (regression introduced in v1.9.10).

#### v1.9.10

- Changed the default binding for <kbd>F7</kbd> to `clink-popup-history` instead of `win-history-list`.
- Fixed potential for incorrect input line coloring after using `clink-popup-history` to choose a history line.
- Fixed `win-history-list` with typed input (regression introduced in v1.6.13).
- Fixed rare issues with the `cmd.admin_title_prefix` setting.
- Internal logging improvements.

#### v1.9.9

- Fixed [#829](https://github.com/chrisant996/clink/issues/829); attempt to compare nil with number (regression introduced in v1.9.8).

#### v1.9.8

- Changed [os.sleep()](#os.sleep) so it yields when called in a coroutine.
- Fixed the "Display all...?" prompt in `clink-select-complete` to show up at the right times.
- Fixed several obscure problems with queued input, e.g. from doskey aliases that include `$T` and from pasting multiline text via the `clink-paste` bindable command.
- Fixed title bar flicker in Windows Terminal caused by the `cmd.get_errorlevel` setting.
- Internal improvements for unit tests.

#### v1.9.7

- Fixed [#825](https://github.com/chrisant996/clink/issues/825); multiline pasting via the Clink paste command with `clink.paste_crlf` set to `crlf` could report an unexpected and confusing message (regression introduced in v1.9.6).

#### v1.9.6
