@@ -45,7 +45,7 @@ extern "C" {
 }
 
 //------------------------------------------------------------------------------
-static setting_bool s_comment_row_show_hints(
+setting_bool g_comment_row_show_hints(
     "comment_row.show_hints",
     "Allow showing input hints in the comment row",
     false);
@@ -1167,7 +1167,7 @@ void line_editor_impl::before_display_readline()
     const bool plain_changed = (m_prev_plain != plain);
     const bool buffer_changed = (plain_changed || !m_prev_classify.equals(m_buffer.get_buffer(), m_buffer.get_length()));
     const bool skip_classifier = (!m_classifier || !buffer_changed);
-    const bool skip_hinter = (!m_hinter || !s_comment_row_show_hints.get() || (!buffer_changed && m_prev_cursor == m_buffer.get_cursor()));
+    const bool skip_hinter = (!m_hinter || !g_comment_row_show_hints.get() || (!buffer_changed && m_prev_cursor == m_buffer.get_cursor()));
     if (skip_classifier && skip_hinter)
         return;
 
