@@ -250,7 +250,7 @@ Using <kbd>Up</kbd> and <kbd>Down</kbd> to move the selection highlight looks li
 
 To see more history, press <kbd>F7</kbd> or <kbd>Ctrl</kbd>-<kbd>Alt</kbd>-<kbd>Up</kbd> to show a [popup list](#popup-windows) of command history matching what's been typed so far.  Typing in the popup list further searches or filters the list, and <kbd>F4</kbd> toggles between searching and filtering.
 
-The [suggestionlist.default](#suggestionglist_default) setting controls whether each session starts with the suggestion list on or off.
+The [suggestionlist.default](#suggestionlist_default) setting controls whether each session starts with the suggestion list on or off.
 
 The colors for the suggestion list can be customized by changing the [color.suggestionlist_*](#color_suggestionlist) settings.
 
@@ -632,7 +632,9 @@ Name                         | Default [*](#alternatedefault) | Description
 <a name="prompt_spacing"></a>`prompt.spacing` | `normal` | The default is `normal` which never removes or adds blank lines.  Set to `compact` to remove blank lines before the prompt, or set to `sparse` to remove blank lines and then add one blank line.
 <a name="prompt-transient"></a>`prompt.transient` | `off` | Controls when past prompts are collapsed ([transient prompts](#transientprompts)).  `off` = never collapse past prompts, `always` = always collapse past prompts, `same_dir` = only collapse past prompts when the current working directory hasn't changed since the last prompt.
 <a name="readline_hide_stderr"></a>`readline.hide_stderr` | False | Suppresses stderr from the Readline library.  Enable this if Readline error messages are getting in the way.
-<a name="suggestionglist_default"></a>`suggestionlist.default` | False | When this is true, a Clink session starts with the suggestion list enabled.  The suggestion list can be toggled on/off with <kbd>F2</kbd> or whatever key is bound to the [`clink-toggle-suggestion-list`](#rlcmd-clink-toggle-suggestion-list) command.
+<a name="suggestionlist_default"></a>`suggestionlist.default` | False | When this is true, a Clink session starts with the suggestion list enabled.  The suggestion list can be toggled on/off with <kbd>F2</kbd> or whatever key is bound to the [`clink-toggle-suggestion-list`](#rlcmd-clink-toggle-suggestion-list) command.
+<a name="suggestionlist_hide_hints"></a>`suggestionlist.hide_hints` | True | When this is true, the input hints controlled by the [`comment_row.show_hints`](#comment_row_show_hints) setting are suppressed while using the suggestion list.
+<a name="suggestionlist_num_history"></a>`suggestionlist.num_history` | `3` | When the suggestion list shows suggestions from multiple sources, this limits how many history suggestions can be shown before suggestions from other sources.  This can be any integer from 1 to 8.
 <a name="terminal_adjust_cursor_style"></a>`terminal.adjust_cursor_style` | True | When enabled, Clink adjusts the cursor shape and visibility to show Insert Mode, produce the visible bell effect, avoid disorienting cursor flicker, and to support ANSI escape codes that adjust the cursor shape and visibility. But it interferes with the Windows 10 Cursor Shape console setting. You can make the Cursor Shape setting work by disabling this Clink setting (and the features this provides).
 <a name="terminal_color_emoji"></a>`terminal.color_emoji` | `auto` | Set this to indicate whether the terminal program draws emojis using colored double width characters.  This needs to be set accurately in order for Clink to display the input line properly when it contains emoji characters.  When set to `off` Clink assumes emojis are rendered using 1 character cell.  When set to `on` Clink assumes emojis are rendered using 2 character cells.  When set to `auto` (the default) Clink tries to predict how emojis will be rendered based on OS version and terminal program.
 <a name="terminal_differentiate_keys"></a>`terminal.differentiate_keys` | False | When enabled, pressing <kbd>Ctrl</kbd>-<kbd>H</kbd> or <kbd>I</kbd> or <kbd>M</kbd> or <kbd>[</kbd> generate special key sequences to enable binding them separately from <kbd>Backspace</kbd> or <kbd>Tab</kbd> or <kbd>Enter</kbd> or <kbd>Esc</kbd>.
